--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#a04000" />
+    <meta name="theme-color" content="#c436c7" />
     <meta
       name="description"
       content="Первый мой книжный интернет-магазин на React.js"
